# LibTorus

./: .gitignore  COPYING  Doxyfile  README.md  meson.build
src/: libtorus.hpp  meson.build
test/: meson.build  test.cpp
